/** @page apreq_changes CHANGES
@brief List of major changes.


@section v2_05 Changes with libapreq2-2.05

- C API [joes]
  Add "flags" attribute to apreq_value_t, planning for charset support.
  This is an ABI change, starting with libapreq2.so.2.0.24.

- C API [joes]
  Add apreq_env_bucket_alloc() to get an allocator directly from the
  environment instead of creating them from a pool.  This is an
  ABI change, starting with libapreq2.so.2.0.23.

- Build system [joes]
  Add --with-apache2-httpd option so users can override apxs's
  notion of where the httpd executable is.  XSBuilder's header
  parser runs from buildconf now instead of configure, so we
  will include those tables in the release tarball.  buildconf
  gets an additional --with-perl option for running the xsbuilder.pl
  parsing script.  The XS generation code in xsbuilder.pl has moved 
  to glue/perl/Makefile.PL.

- Perl API [joes]
  Allow ctors for Apache::Cookie, Apache::Cookie::Jar
  and Apache:::Request to accept Apache::Request objects
  (instead of requiring an Apache::RequestRec object).
  This thread details the bug
        http://thread.gmane.org/gmane.comp.apache.mod-perl/15727

- C API [Bojan Smojver]
  Bake cookies with err_headers_out so they are
  sent on non-2xx server responses (ie. a 304 redirect).
  Also ensure that headers are copied with apr_table_add
  instead of apr_table_addn.  Since apreq_cookie_bake()
  allocates from the stack, the Set-Cookie headers would 
  occasionally get mangled without this patch.

- C API [joes]
  Add apreq_register_parser(), which allows users to add
  their own parsers to apreq_parser()'s recognized MIME types.

- C API [joes]
  Support "multipart/mixed" file uploads.
  Support XForms' "multipart/related" enctype.

- C API [joes]
  Add apreq_hook_apr_xml_parser(), which is a simple wrapper
  hook around APR's expat-based apr_xml_parser.  Add a generic
  parser apreq_parse_generic() to parse arbitrary enctypes using
  the hook API.

